syntax = "proto3";


option java_multiple_files = true;
option java_package = "grpc.eBank.payments";
option java_outer_classname = "PaymentServiceImpl";

package payments;


service PaymentService {
 
  //sends multiple payments to single/multiple account(s) 
  rpc sendMultiplePayments(stream PaymentRequest) returns (stream UpdateBalanceResponse ) {}
   
}

message PaymentRequest {
	string accountFrom = 1;
	string accountTo = 2;
	double amount = 3;	
}

message UpdateBalanceResponse {
	string accountTo = 1;
	string acknowledgement = 3;
}

